--- a/assets/scss/bootvars.scss
+++ b/assets/scss/bootvars.scss
@@ -5,3 +5,16 @@ $container-max-widths: (
   xl: 1400px
 ) !default;
 
+$h1-font-size: 2.3rem;
+$h3-font-size: 1.7rem;
+$primary: #ee9708;
+$secondary: #dbdbdb;
+$theme-colors: (
+  "header-1": #373737,
+  "card-title": #6a6a6a,
+);
+
+$enable-shadows: true;
+$paragraph-margin-bottom: 0;
+$headings-margin-bottom: 0;
+$body-color: #6a6a6a;
