--- a/assets/scss/helpers/animations.scss
+++ b/assets/scss/helpers/animations.scss
@@ -7,6 +7,8 @@
   }
   100% {
     z-index: -5;
+    display: none;
+    opacity: 0;
   }
 }
 
@@ -16,7 +18,6 @@
   }
   to {
     opacity: 1;
-    z-index: 60;
   }
 }
 
