--- a/assets/scss/helpers/helpers.scss
+++ b/assets/scss/helpers/helpers.scss
@@ -104,29 +104,19 @@ section {
   }
 }
 
-@mixin box-ratio($ratio) {
-  @if $ratio == "16-9" {
-    padding-top: 56.25%;
-  }
-  @if $ratio == "1-1" {
-    padding-top: 100%;
-  }
-  @if $ratio == "4-3" {
-    padding-top: 75%;
-  }
-  @if $ratio == "8-5" {
-    padding-top: 62.5%;
-  }
-  @if $ratio == "3-2" {
-    padding-top: 66.66%;
-  }
+@mixin box-ratio($big, $small) {
   position: relative;
   width: 100%;
   overflow: hidden;
+  padding-top: $small/$big * 100%;
 }
 
-@mixin box-shadow($horizontal, $vertical, $blur, $spread, $color) {
-  box-shadow: $horizontal $vertical $blur $spread $color;
+@mixin box-shadow($horizontal, $vertical, $blur, $spread, $color, $inset: null) {
+  @if $inset {
+    box-shadow: inset $horizontal $vertical $blur $spread $color;
+  } @else {
+    box-shadow: $horizontal $vertical $blur $spread $color;
+  }
 }
 
 @mixin curve($position, $height, $hideAt: null, $inverse: null) {
@@ -163,3 +153,4 @@ section {
 }
 @import "loader.scss";
 @import "form.scss";
+@import "slider.scss";
