--- a/src/scss/helpers/_helpers.scss
+++ b/src/scss/helpers/_helpers.scss
@@ -29,7 +29,7 @@ section {
   transform: translate(-50%, -50%);
   object-fit: cover;
   min-height: 100%;
-  min-width: 100%;
+  width: 100%;
 }
 
 .bg-container {
@@ -234,4 +234,5 @@ section {
   }
 }
 
-@import "components";
+@import "components.scss";
+@import "contact-form-7";
