--- a/src/scss/helpers/_slick-theme.scss
+++ b/src/scss/helpers/_slick-theme.scss
@@ -37,10 +37,12 @@
                 &::after {
                     color: $slick-arrow-color;
                     font-size: $slick-arrow-size;
+                    width: 100%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     transition: all 0.5s;
+                    height: 100%;
                 }
                 &:focus {
                     outline: none;
@@ -86,6 +88,8 @@
                     justify-content: center;
                     align-items: center;
                     transition: all 0.5s;
+                    width: 100%;
+                    height: 100%;
                 }
                 &:focus {
                     outline: none;
